@@ -1,6 +1,7 @@
 2015-04-22 Philipp Klaus Krause <pkk AT spth.de>
 
-	* src/z80/peep.c:
+	* src/z80/peep.c,
+	  support/regression/tests/bug-2376.c:
 	  Fix peephole optimizer bug #2376.
 
 2015-04-21 Philipp Klaus Krause <pkk AT spth.de>
